--- a/.classpath
+++ b/.classpath
@@ -4,4 +4,5 @@
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" />
   <classpathentry kind="output" path="bin" />
   <classpathentry kind="src" path="/SnapKit" />
+  <classpathentry kind="src" path="/SnapTea" />
 </classpath>
