--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,24 @@ java {
 }
 
 repositories {
+
+    // Jitpack makes builds from GitHub repos
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    compile project(':SnapKit')
-    compile project(':RMDraw')
+
+    // If Local SnapKit project, use that, otherwise use latest SnapKit GitHub repo
+    if (findProject(':SnapKit') != null) { println 'Using local SnapKit project'
+        compile project(':SnapKit') }
+    else { println 'Using latest SnapKit GitHub repo'
+        implementation 'com.github.reportmill:SnapKit:master-SNAPSHOT'  }
+
+    // If Local RMDraw project, use that, otherwise use latest RMDraw GitHub repo
+    if (findProject(':RMDraw') != null) { println 'Using local RMDraw project'
+        compile project(':RMDraw') }
+    else { println 'Using latest RMDraw GitHub repo'
+        implementation 'com.github.reportmill:RMDraw:master-SNAPSHOT'  }
 }
 
 mainClassName = 'snapbuild.app.App'
