--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'idea'
 }
 
 sourceSets.main.java.srcDirs = ['src']
@@ -20,17 +21,17 @@ repositories {
 
 dependencies {
 
-    // If Local SnapKit project, use that, otherwise use latest SnapKit GitHub repo
-    if (findProject(':SnapKit') != null) { println 'Using local SnapKit project'
-        compile project(':SnapKit') }
-    else { println 'Using latest SnapKit GitHub repo'
-        implementation 'com.github.reportmill:SnapKit:master-SNAPSHOT'  }
+    // If Local SnapKit project, use that
+    if (findProject(':SnapKit') != null) {
+        println 'Using local SnapKit project'
+        compile project(':SnapKit')
+    }
 
-    // If Local RMDraw project, use that, otherwise use latest RMDraw GitHub repo
-    if (findProject(':RMDraw') != null) { println 'Using local RMDraw project'
-        compile project(':RMDraw') }
-    else { println 'Using latest RMDraw GitHub repo'
-        implementation 'com.github.reportmill:RMDraw:master-SNAPSHOT'  }
+    // Otherwise use Jitpack.io to generate maven package from Github SnapKit repo, latest commit
+    else {
+        println 'Using latest SnapKit GitHub repo'
+        implementation 'com.github.reportmill:SnapKit:master-SNAPSHOT'
+    }
 }
 
 mainClassName = 'snapbuild.app.App'
