--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     // If Local SnapKit project, use that
     if (findProject(':SnapKit') != null) {
         println 'Using local SnapKit project'
-        compile project(':SnapKit')
+        implementation project(':SnapKit')
     }
 
     // Otherwise use Jitpack.io to generate maven package from Github SnapKit repo, latest commit
