--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
+import java.text.SimpleDateFormat
 
 plugins {
-    id 'java'
     id 'application'
-    id 'idea'
 }
 
 group 'com.reportmill'
-version '1.0.0'
+version new SimpleDateFormat("yyyy.MM").format(new Date())
 
 sourceSets.main.java.srcDirs = ['src']
 sourceSets.main.resources.srcDirs = ['src']
@@ -17,24 +16,12 @@ java {
 }
 
 repositories {
-
-    // Jitpack makes builds from GitHub repos
-    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
 
-    // If Local SnapKit project, use that
-    if (findProject(':SnapKit') != null) {
-        println 'Using local SnapKit project'
-        implementation project(':SnapKit')
-    }
-
-    // Otherwise use Jitpack.io to generate maven package from Github SnapKit repo, latest commit
-    else {
-        println 'Using latest SnapKit GitHub repo'
-        implementation 'com.github.reportmill:SnapKit:master-SNAPSHOT'
-    }
+    // SnapKit project
+    implementation project(':SnapKit')
 }
 
 mainClassName = 'snapbuild.app.App'
@@ -44,13 +31,15 @@ mainClassName = 'snapbuild.app.App'
  *
  * We could use the standard jar task just by using jar { ... } and deleting 'baseName' and 'with jar' lines.
  */
-task buildExecJar(type: Jar) {
+task buildFullJar(type: Jar) {
     manifest {
-        attributes 'Main-Class': 'snapbuild.app.App'
+        attributes 'Main-Class': 'snapbuild.app.App',
+        'Application-Name': 'SnapBuilder'
     }
     archiveBaseName = 'SnapBuilderAll'
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     with jar
+    dependsOn build
 }
